force-app/main/default/objects/LLC_BI__Credit_Memo_Modifcation__c/fields/CLA_Budget_Amount_Change__c.field-meta.xml
<CustomField>
    <fullName>CLA_Budget_Amount_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CLA Budget Amount Change</label>
    <type>Checkbox</type>
</CustomField>