force-app/main/default/objects/LLC_BI__Credit_Memo_Modifcation__c/fields/cm_Approval_Required_Formula__c.field-meta.xml
<CustomField>
    <fullName>cm_Approval_Required_Formula__c</fullName>
    <formula>LLC_BI__Approval_Required__c</formula>
    <label>Approval Required</label>
    <type>Checkbox</type>
</CustomField>