force-app/main/default/objects/LLC_BI__Credit_Memo_Modifcation__c/fields/cm_ChangeMemoFlag__c.field-meta.xml
<CustomField>
    <fullName>cm_ChangeMemoFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ChangeMemoFlag</label>
    <type>Checkbox</type>
</CustomField>