force-app/main/default/objects/LLC_BI__Credit_Memo_Modifcation__c/fields/LLC_BI__Amount_Change__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Amount_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is manually selected and optional. This check box indicates if a change of amount is the reason a modification is being created.</description>
    <label>Loan Amount Change</label>
    <type>Checkbox</type>
</CustomField>