force-app/main/default/objects/LLC_BI__Credit_Memo_Modifcation__c/fields/LLC_BI__Approval_Required__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Approval_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is automatically populated based on system configuration. The checkbox is populated based on change request&apos;s category.</description>
    <label>Approval Required</label>
    <type>Checkbox</type>
</CustomField>