force-app/main/default/objects/LLC_BI__Credit_Memo_Modifcation__c/fields/LLC_BI__Description__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Description__c</fullName>
    <description>This field is a free form text field. It is optional and manually entered. It is used to input more information or details for the memo.</description>
    <label>Description</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>