force-app/main/default/objects/LLC_BI__Credit_Memo_Modifcation__c/fields/LLC_BI__Loan__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Loan__c</fullName>
    <description>This field is a master-detail field to the loan object and is used to associate the Memo to a particular loan. This field is automatically populated when a memo is started from a loan, and is required to associate the correct memo with the loan it is associated to.</description>
    <label>Loan</label>
    <referenceTo>LLC_BI__Loan__c</referenceTo>
    <relationshipLabel>Memos</relationshipLabel>
    <relationshipName>Change_Memos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>