force-app/main/default/objects/LLC_BI__Credit_Memo_Modifcation__c/fields/LLC_BI__Loan_Renewal__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Loan_Renewal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The system automatically populates when a user creates a non-material modification. This lookup field associates the Memo to the appropriate LoanRenewal record.</description>
    <label>Loan Renewal</label>
    <referenceTo>LLC_BI__LoanRenewal__c</referenceTo>
    <relationshipLabel>Loan Renewal</relationshipLabel>
    <relationshipName>LoanRenewal</relationshipName>
    <type>Lookup</type>
</CustomField>