force-app/main/default/objects/LLC_BI__Credit_Memo_Modifcation__c/fields/LLC_BI__Loan_Term_Change__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Loan_Term_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is manually selected and optional. This check box is used to specify if the change to the loan was that of a term change.This field can be associated to a field set on the loan,  IF associated to a field set, when selected the monitored fields section of the memo will display those fields.</description>
    <inlineHelpText>Interest rate change, length, etc</inlineHelpText>
    <label>Loan Term Change</label>
    <type>Checkbox</type>
</CustomField>