force-app/main/default/objects/LLC_BI__Credit_Memo_Modifcation__c/fields/LLC_BI__Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Maturity_Date__c</fullName>
    <description>--DEPRECATED-- Users populate this field, generally as part of a workflow, to store the proposed Maturity Date as part of an extension. Use this field to update the loan with the new value.</description>
    <label>-D Maturity Date</label>
    <type>Date</type>
</CustomField>