force-app/main/default/objects/LLC_BI__Credit_Memo_Modifcation__c/fields/LLC_BI__Maturity_Date_Change__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Maturity_Date_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Users select this optional checkbox field to specify if the change to the loan is a maturity date change. The system automatically populates this field during a Short Term Extension. Users can associate this field to a fieldset on the loan, and when selected the monitored fields section of the memo displays those fields.</description>
    <label>Maturity Date Change</label>
    <type>Checkbox</type>
</CustomField>