force-app/main/default/objects/LLC_BI__Credit_Memo_Modifcation__c/fields/LLC_BI__Other__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Other__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is manually selected and optional. This check box is used to specify a change other than those listed on the Memo page. This field can be associated to a field set on the loan,  IF associated to a field set, when selected the monitored fields section of the memo will display those fields.</description>
    <label>Other</label>
    <type>Checkbox</type>
</CustomField>