force-app/main/default/objects/LLC_BI__Credit_Memo_Modifcation__c/fields/LLC_BI__Re_approval_After_Expiration__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Re_approval_After_Expiration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is manually selected and optional. This check box is used to specify that the change is related to a re-approval of the loan after its expiry.This field can be associated to a field set on the loan,  IF associated to a field set, when selected the monitored fields section of the memo will display those fields.</description>
    <label>Re-Approval After Expiration</label>
    <type>Checkbox</type>
</CustomField>