force-app/main/default/objects/LLC_BI__Credit_Memo_Modifcation__c/fields/LLC_BI__Ready_for_Approval__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Ready_for_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is manually selected and optional. This check box is used to specify that the Memo is ready to be sent for approval.</description>
    <inlineHelpText>Check this when your loan modification is ready to be sent for approval.</inlineHelpText>
    <label>Ready for Approval</label>
    <type>Checkbox</type>
</CustomField>