force-app/main/default/objects/LLC_BI__Credit_Memo_Modifcation__c/fields/LLC_BI__User_Initiated__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__User_Initiated__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field is automatically set and is used to indicate if the Memo was initiated by a user. If the Memo was initiated via an automated process, then the value will be set to false and the record will be excluded from user initiated Memo restrictions.</description>
    <label>User_Initiated</label>
    <type>Checkbox</type>
</CustomField>